[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet-studio"
version = "0.1.0"
description = "BitNet Studio — treino, fine-tuning, MCP bridge e export para o ambiente BitNet CPU-Universal (persona D4)"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "accelerate>=0.29",
    "safetensors>=0.4",
]

[project.scripts]
bitnet-studio = "studio.cli:main"

[tool.setuptools.packages.find]
include = ["studio*"]

[tool.setuptools.package-data]
"studio.webui" = ["*.html"]
